# DurgonicsBeeck-PolarimetricScintillation

./: .gitignore  CITATION.cff  LICENSE  README.md
code/matlab/: DB_compute_faraday.m  DB_compute_stokes.m  DB_core_operators.m  DB_generate_phase_screen.m  synthetic_L2D_demo.m  synthetic_varpsi_collapse.m
code/matlab/utils/: DB_IGRF_projection.m  DB_fresnel_filter.m  DB_taylor_mapping.m
code/python/: pyproject.toml
code/python/examples/: demo_l2d.py  demo_varpsi_collapse.py
code/python/src/db_formalism/: __init__.py  faraday.py  geometry.py  jones.py  phase_screen.py  stokes.py
code/tests/: test_faraday.py  test_geometry.py  test_stokes.py
docs/: formalism_overview.md  quick_start.md
examples/: run_matlab_varpsi_demo.sh
examples/dataset_toy/: README.md
figures/: DB_magnetometry_inversion.tikz  README_figures.md
